--- a/AVS353/video_archive_AVS353.htm
+++ b/AVS353/video_archive_AVS353.htm
@@ -19,42 +19,50 @@ a {
 <B>Welcome!</B><BR>
 The purpose of this page is to provide links to videos of lectures and  movies used in class. The videos are grouped according to subject. Lecture videos are labelled by date of the lecture.<p>
 <B>Aristotle and Equine Reproduction</B><BR>
-<A HREF=https://video.maine.edu/media/2022-01-19_AVS+353_Grading_Aristotle./1_d5l680qb>2022-01-19 Lecture</A> in which we grade Aristotle on his knowledge of equine reproduction.<BR><A HREF=https://video.maine.edu/media/2021-01-27_AVS+353+Equine+Reproduction_Intro+and+Aristotle/1_cxtk69y7>2021-01-27 Lecture</A> <p>
-<p>
+...in which we grade Aristotle on his knowledge of equine reproduction.<br>
+<A HREF=https://video.maine.edu/media/2022-01-19_AVS+353_Grading_Aristotle./1_d5l680qb>2022-01-19 Lecture</A> <BR><A HREF=https://video.maine.edu/media/2021-01-27_AVS+353+Equine+Reproduction_Intro+and+Aristotle/1_cxtk69y7>2021-01-27 Lecture</A> <p>
 <B>Basic Mammalian Reproduction</B><BR> 
-<A HREF=https://video.maine.edu/media/2022-01-26_AVS_353_Basic_Mammalian_Reproduction/1_up8bfml6>2022-01-26 Lecture</A> in which we discuss basic mammalian reproduction and hormones.<BR>
-
+...in which we discuss basic mammalian reproduction and hormones.<p>
+<A HREF=https://video.maine.edu/media/2022-01-26_AVS_353_Basic_Mammalian_Reproduction/1_up8bfml6>2022-01-26 Lecture</A> <BR>
 <A HREF=https://video.maine.edu/media/2020-02-03_AVS+353_Lecture_Basic-Reproduction_hormones/1_q4p51qpt>2021-02-03 Lecture</A><p>
 
 <!-- XXXXXXXXXXXXXXXXXXXXXXXX--> 
-<A HREF=https://video.maine.edu/media/Clip+of+2022-02-02_AVS_353_Basic_Mammalian_Reproduction/1_1clrt0fp?st=0&ed=5160>2022-02-02 Lecture</A> in which we focus on seasonality, reproductive behavior, production of gametes, follicles and ovulation.<br>
+...and then we focus on seasonality, reproductive behavior, production of gametes, meiosis, follicles, sperm production and ovulation and the estrous cycle.<p>
+<A HREF=https://video.maine.edu/media/Clip+of+2022-02-02_AVS_353_Basic_Mammalian_Reproduction/1_1clrt0fp?st=0&ed=5160>2022-02-02 Lecture</A> <br>
 <A HREF=https://video.maine.edu/media/2020-02-10_AVS+353_Lecture_Basic-Reproduction_hormones-2/1_5giftn5x>2021-02-10 Lecture</A><p>
 
 <!-- XXXXXXXXXXXXXXXXXXXXXXXX--> 
-<A HREF=https://video.maine.edu/media/2022_02_09_AVS_353_regnancy_parturition_etc/1_lh640w1s>2022-02-09 Lecture</A> in which we complete basic repoduction, discussing fertilization pregnancy etc<br>
+... and finally we focus on fertilization, early embryonic development, parturition, lactation, and hormonal control<p>
+<A HREF=https://video.maine.edu/media/2022_02_09_AVS_353_regnancy_parturition_etc/1_lh640w1s>2022-02-09 Lecture</A> <br>
 <A HREF=https://video.maine.edu/media/2020-02-17_AVS+353_Lecture_Basic-Reproduction_hormones-3/1_bqe74ldy>2021-02-17 Lecture</A><p>
 <p>
 <B>Reproductive Anatomy</B><BR>
-<A HREF=https://video.maine.edu/media/2022_03_02_AVS_353_estrous_cycle_reproductive_anatomy/1_z44hk818>2022-03-02 Lecture</A> Estrous cycle review and Reproductive Anatomy: Pineal gland, hypothalamus, pituitary, ovaries, uterus, follicle, CL, counter current exchange mechanism for systemic distribution of prostaglandin, uterine glands, myometrium, cervix, changes with cycle, etc.<br>
+Estrous cycle review and Reproductive Anatomy: Pineal gland, hypothalamus, pituitary, ovaries, uterus, follicle, CL, counter current exchange mechanism for systemic distribution of prostaglandin, uterine glands, myometrium, cervix, changes with cycle, etc.<p>
+<A HREF=https://video.maine.edu/media/2022_03_02_AVS_353_estrous_cycle_reproductive_anatomy/1_z44hk818>2022-03-02 Lecture</A> <br>
 <A HREF=https://video.maine.edu/media/2020-02-24_AVS+353_Lecture_Reproductive_Anatomy_1/1_egc4h0lk>2021-02-24 Lecture</A> <br>
 <A HREF=https://video.maine.edu/media/2021-03-03_AVS+353_Lecture_Reproductive_Anatomy_2/1_kf39mrc5>2021-03-03 Lecture</A>  <p>
 <B>Reproductive Seasonality</B><BR>
-<A HREF=https://video.maine.edu/media/2022_02_16_AVS_353_reproductive+seasonality/1_s7mt4ada>2022-02-16 Lecture</A> Reproductive Seasonality: a review of imposed breeding seasons and reproductive patterns through the year. Understanding seasonal changes in the mare is the key to making good breeding management decisions.<br> 
+Reproductive Seasonality: a review of imposed breeding seasons and reproductive patterns through the year. Understanding seasonal changes in the mare is the key to making good breeding management decisions.<p>
+<A HREF=https://video.maine.edu/media/2022_02_16_AVS_353_reproductive+seasonality/1_s7mt4ada>2022-02-16 Lecture</A> <br> 
 <A HREF=https://video.maine.edu/media/2021-03-10_AVS+353_Lecture_Reproductive_Seasonality/1_5nbijjky>2021-03-10 Lecture</A> 
 <p>
 <B>Estrous Cycle</B><br>
-<A HREF=https://video.maine.edu/media/2022_02_23_AVS_353_estrous_cycle/1_77jav7wj>2022-23-17 Lecture</A> Estrous Cycle: a review of the changes between estrus and diestrus of equine behavior, ovarian dynamics (follicular growth, ovulation, CL maintenance and luteolysis), gonadotropins (FSH and LH), ovarian steroids (estrogen and progesterone), inhibin, and prostaglandin F 2 alpha.<br> 
+Estrous Cycle: a review of the changes between estrus and diestrus of equine behavior, ovarian dynamics (follicular growth, ovulation, CL maintenance and luteolysis), gonadotropins (FSH and LH), ovarian steroids (estrogen and progesterone), inhibin, and prostaglandin F 2 alpha.<p>
+<A HREF=https://video.maine.edu/media/2022_02_23_AVS_353_estrous_cycle/1_77jav7wj>2022-23-17 Lecture</A>  
 <A HREF=https://video.maine.edu/media/2021-03-17_AVS+353_Lecture_Estrous-Cycle/1_vtwahzw2>2021-03-17 Lecture</A> 
 <p>
 <B>Endocrinology of Pregnancy</B><BR>
-<A HREF=https://video.maine.edu/media/2022_03_09_AVS_353_endocrinology_of_pregnancy/1_5ijrgehc>2022-03-09 Lecture</A> Endocrinology of Pregnancy. The three luteal responses, the role of progestogens and estrogens from the ovary and fetoplacental unit (fetal gonads and placenta) in supporting pregnancy. Appearance of equine chorionic gonadotropin to drive second and third luteal responses. <br>
-<A HREF=https://video.maine.edu/media/2022_03_23_AVS_353_endocrinology_of_pregnancy/1_wbox6hzk>2022-03-23 Lecture</A> Development of the fetus.<br>
-<A HREF=https://video.maine.edu/media/2022_03_30_AVS_353_fetal_development/1_7kswb5rw>2022-03-30 Lecture</A> Later development of fetus and fetal movement.<br>
+Endocrinology of Pregnancy. The three luteal responses, the role of progestogens and estrogens from the ovary and fetoplacental unit (fetal gonads and placenta) in supporting pregnancy. Appearance of equine chorionic gonadotropin to drive second and third luteal responses. Development of the fetus and fetal movement.<p>
+<A HREF=https://video.maine.edu/media/2022_03_09_AVS_353_endocrinology_of_pregnancy/1_5ijrgehc>2022-03-09 Lecture</A> <br>
+<A HREF=https://video.maine.edu/media/2022_03_23_AVS_353_endocrinology_of_pregnancy/1_wbox6hzk>2022-03-23 Lecture</A> <br>
+<A HREF=https://video.maine.edu/media/2022_03_30_AVS_353_fetal_development/1_7kswb5rw>2022-03-30 Lecture</A> <p>
 <A HREF=https://video.maine.edu/media/2021-03-31_AVS+353_Lecture_Endocrinology_of_pregnancy/1_uiylp0pk>2021-03-31 Lecture</A> 
-<P>
-<A HREF=https://video.maine.edu/media/2021-04-08_AVS+353_Lecture_Endocrinology_of_pregnancy_2/1_txopdujs>2021-04-07</A> The embryonic vesicle, its mobility. Early embryology related to appearance on ultrasound. Allantois and yolk sac. Formation of the three walled placenta.<P> 
-<A HREF=https://www.youtube.com/watch?v=dAOWQC-OBv0>Video on Basic Embryology.</A> This video explains key concepts in early embryology. The inner cell mass or embryonic disk consists of two layers of cells (epiblast and hypoplast, epi meaning "upon", and hypo meaning "under"), like two slices of bread.  Cells of the epiblast multiply and form a new middle layer, to create a sandwich. The three layers are called ectoderm (from the epiblast - this will become the skin and nervous tissue), mesoderm (the middle layer, which will becomes bone, muscle, connective tissue and the cardiovascular system), and endoderm (the gut and related structures such as liver). The endoderm migrates and spreads under the chorion, forming an inner wall of the blastocyst, creating the yolk sack. The mesoderm then migrates between the ectoderm (chorion) and endoderm creating a middle layer, serving as a robust system of blood vessels for the placenta. The three layers of the placenta represent the three layers of the embryonic disc (ectoderm, mesoderm, endoderm).   <P>
-The migration of endoderm and formation of the mesoderm coincides with invagination of the embryo, gastrulation, to enclose the endoderm as a tube with openings at either end (to become anus and mouth), and creates an opening in the central portion connecting the gut to the yolk sac, at the site which will become the umbilicus.  
+<p>
+The embryonic vesicle, its mobility. Early embryology related to appearance on ultrasound. Allantois and yolk sac. Formation of the three walled placenta.<br>
+<A HREF=https://video.maine.edu/media/2021-04-08_AVS+353_Lecture_Endocrinology_of_pregnancy_2/1_txopdujs>2021-04-07</A> <P> 
+This video explains key concepts in early embryology. The inner cell mass or embryonic disk consists of two layers of cells (epiblast and hypoplast, epi meaning "upon", and hypo meaning "under"), like two slices of bread.  Cells of the epiblast multiply and form a new middle layer, to create a sandwich. The three layers are called ectoderm (from the epiblast - this will become the skin and nervous tissue), mesoderm (the middle layer, which will becomes bone, muscle, connective tissue and the cardiovascular system), and endoderm (the gut and related structures such as liver). The endoderm migrates and spreads under the chorion, forming an inner wall of the blastocyst, creating the yolk sack. The mesoderm then migrates between the ectoderm (chorion) and endoderm creating a middle layer, serving as a robust system of blood vessels for the placenta. The three layers of the placenta represent the three layers of the embryonic disc (ectoderm, mesoderm, endoderm).   <P>
+The migration of endoderm and formation of the mesoderm coincides with invagination of the embryo, gastrulation, to enclose the endoderm as a tube with openings at either end (to become anus and mouth), and creates an opening in the central portion connecting the gut to the yolk sac, at the site which will become the umbilicus.<p>  
+<A HREF=https://www.youtube.com/watch?v=dAOWQC-OBv0>Video on Basic Embryology.</A>
 <P>
 <B>Pregnancy and Foaling</B><br>
 <p><Blockquote>
